(fix) O3-2694: fixed cancel btn caption alignment

--- a/packages/esm-form-entry-app/src/app/fe-wrapper/fe-wrapper.component.scss
+++ b/packages/esm-form-entry-app/src/app/fe-wrapper/fe-wrapper.component.scss
@@ -180,6 +180,7 @@
 
   & button {
     width: 100%;
-    padding-inline-end: 0;
+    padding-inline: 15px 0;
+    padding-block: calc(0.875rem - 3px);
   }
 }
